<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/putih"
    tools:context=".Profil.DataDiriActivity">

    <ImageView
        android:layout_marginTop="5dp"
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_image_blue_24dp"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/gantifoto"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/ganti"
        android:textColor="@color/putih"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/inputnamaprofil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/namalgkp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/nikprofil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/nik"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/alamat"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/gender"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tgllahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:layout_marginLeft="4dp"
        android:text="@string/date"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_blue_24dp"/>

    <Button
        android:id="@+id/btnsimpan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textSize="16dp"
        android:background="@drawable/round2"
        android:textColor="@color/putih"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />


</LinearLayout>