<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="390dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="2dp"
                android:padding="16dp"
                android:src="@drawable/textinvuyaputih" />
            <EditText
                android:id="@+id/txtnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:hint="@string/namalgkp"
                android:textColorHint="@color/putih"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/putih"/>
            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:hint="@string/email"
                android:textColorHint="@color/putih"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/putih"/>
            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/putih"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/putih"/>

            <EditText
                android:id="@+id/konfirmasipw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/putih"
                android:hint="@string/kpassword"
                android:inputType="textPassword"
                android:textColorHint="@color/putih"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/putih"/>

            <Button
                android:id="@+id/btndaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <Button
                android:id="@+id/btnkembali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/round2"
                android:text="@string/halmasuk"
                android:textAllCaps="false"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/putih"/>
        </LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>