<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Intent.Profil.Profil2">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar">
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:tint="@color/putih"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kembali"
            android:textColor="@color/putih"
            android:textSize="19dp"
            android:layout_marginLeft="25dp"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/image_view"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/gambarprofil"
                android:scaleType="centerCrop"/>

            <Button
                android:id="@+id/gantifoto"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:text="@string/ganti"
                android:textColor="@color/putih"
                android:textAllCaps="false"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalgkp"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/inputnamaprofil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ivan Taufiq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nik"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/nikprofil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="61710123456789"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nohp"
                android:layout_marginTop="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="0895701992393" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:layout_marginTop="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Perum 2"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Laki-laki"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tgllahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="4dp"
                android:text="15-10-1999"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_blue_24dp"/>

            <Button
                android:id="@+id/btnsimpan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:textSize="16dp"
                android:background="@drawable/round2"
                android:textColor="@color/putih"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>