<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".ResiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Terima Kasih,"
        android:textAlignment="center"
        android:textSize="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resitext"
        android:textAlignment="center"
        android:textSize="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/resitext2"
        android:textSize="16dp"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noisiulang"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="16dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resitext3"
        android:textAlignment="center"
        android:textSize="16dp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:background="@drawable/linearshape"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resitext4"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/noresi"
            android:textSize="22dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total Pembayaran"
            android:textAlignment="center"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rp. 200.000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Bukti Transfer"
        android:textSize="16dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gantifoto"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="11dp"
            android:text="Pilih Gambar"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:background="@drawable/round2"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="180dp"
            android:layout_gravity="center_vertical"
            android:textSize="11dp"
            android:text="Kirim"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:background="@drawable/round2"/>
    </LinearLayout>
    <ImageView
        android:layout_marginTop="5dp"
        android:id="@+id/image_view"
        android:layout_width="390dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"/>




</LinearLayout>