<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/putih"
    tools:context=".Profil.InformasiAkun.InfoNoHpActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar">
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back"
            android:tint="@color/putih"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ganti Nomor Handphone"
            android:textColor="@color/putih"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/nohp"
                android:textColor="@color/putih"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:text="0895701992393"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nohpbaru"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/konfirmasipw"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnsimpan"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/simpan"
        android:background="@drawable/round2"
        android:textColor="@color/putih"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />

</LinearLayout>